--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/YOUR_USERNAME/xactus -chat-cdn.git"
+    "url": "git+https://github.com/LanSynergy/xactus-widget-cdn.git"
   },
   "keywords": [
     "chat",
@@ -23,9 +23,9 @@
   "author": "Your Name",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/YOUR_USERNAME/xactus -chat-cdn/issues"
+    "url": "https://github.com/LanSynergy/xactus-widget-cdn/issues"
   },
-  "homepage": "https://YOUR_USERNAME.github.io/xactus -chat-cdn/",
+  "homepage": "https://lansynergy.github.io/xactus-widget-cdn/",
   "files": [
     "widget.js",
     "index.html",
